--- a/MiCorpLtd/manifest.json
+++ b/MiCorpLtd/manifest.json
@@ -2,11 +2,18 @@
   "name": "Micorp Trading LLC",
   "short_name": "Micorp",
   "description": "Premier general trading company in Dubai specializing in Electronics, IT Products, and Automobiles.",
+  "id": "/pages/index.html",
   "start_url": "./pages/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#00b8d4",
-  "icons": [
+  "theme_color": "#000864",
+  "icons":
+  [
+   {
+      "src": "./assets/images/icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    }, 
     {
       "src": "./assets/images/icons/icon-72x72.png",
       "sizes": "72x72",
@@ -18,29 +25,13 @@
       "type": "image/png"
     },
     {
-      "src": "./assets/images/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
       "src": "./assets/images/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
       "src": "./assets/images/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./assets/images/icons/icon-384x384.png",
-      "sizes": "384x384",
       "type": "image/png"
     },
     {
@@ -51,7 +42,7 @@
   ],
   "screenshots": [
     {
-      "src": "./assets/images/screenshots/mobile-screenshot1.png",
+      "src": "./assets/images/screenshots/mobile-screenshot1.jpg",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
@@ -65,9 +56,9 @@
       "label": "Product details on mobile"
     },
     {
-      "src": "./assets/images/screenshots/desktop-screenshot1.jpg",
+      "src": "./assets/images/screenshots/desktop-screenshot1.png",
       "sizes": "1920x1080",
-      "type": "image/jpeg",
+      "type": "image/png",
       "form_factor": "wide",
       "label": "Homepage on desktop"
     }
